# tsk

./: .gitignore  README.md  README.txt  TODO.txt  cabal.project  flake.nix  hie.yaml  justfile  tsk.cabal  tsk.nix
app/: BinaryFormat.hs  Main.hs  Todoist.hs
docs/: CNAME  binary-format.html  index.html  main.css  v0.html
docs-src/: index.html
docs-templates/: binary-format.html  version.html
home-manager/: tsk.nix
nix/: haskellDeps.nix  home-manager.nix  update
nix/haskellDeps/: overlay.nix
nix/haskellDeps/diagnostica/: default.nix  src.nix
nix/haskellDeps/diagnostica-sage/: default.nix  src.nix
nix/haskellDeps/generics-eot/: default.nix  src.nix
nix/haskellDeps/sage/: default.nix  src.nix
nix/haskellDeps/sage-parsers-instances/: default.nix
src/: BinaryCodec.hs  Getter.hs  Lib.hs  MD5.hs  Pretty.hs  StateId.hs  Todo.hs  Toml.hs
src/Todo/: Comment.hs  Task.hs  V0.hs
templates/: new-task.txt
test/: Main.hs
tsk/: LICENSE  tsk.cabal
tsk/app/: Main.hs
tsk/src/: Base32.hs  GID.hs  Todo.hs
