cabal-version:      3.0
name:               tsk
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    build-depends:
        attoparsec,
        barbies,
        base ^>=4.19.2.0,
        binary,
        bytestring,
        containers,
        cryptohash-md5,
        entropy,
        hashable,
        text >=2.0,
        time,
        uuid
    exposed-modules:
        Base32
        Lib
        MD5
        Todo
    hs-source-dirs:   src
    default-language: Haskell2010

executable tsk
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        attoparsec,
        tsk,
        barbies,
        base ^>=4.19.2.0,
        bytestring,
        containers,
        directory,
        text,
        time,
        optparse-applicative,
        process
    default-language: Haskell2010

test-suite tsk-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        tsk,
        base ^>=4.19.2.0,
        containers,
        hashable,
        hedgehog,
        hspec,
        hspec-hedgehog,
        uuid
    default-language: Haskell2010
